Finish MPD/NCMPCPP install

--- a/cfg/ncmpcpp/config
+++ b/cfg/ncmpcpp/config
@@ -62,7 +62,7 @@
 ##
 ## If you set format to 44100:16:2, make it 'yes'.
 ##
-#visualizer_in_stereo = yes
+visualizer_in_stereo = yes
 #
 ##
 ## Note: Below parameter defines how often ncmpcpp has to "synchronize"
