Update mpd directory

--- a/cfg/mpd/mpd.conf
+++ b/cfg/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory                  "/home/lain/Music"
+music_directory                  "/home/lain/Music/beets"
 db_file                          "/home/lain/.mpd/database"
 log_file                         "/home/lain/.mpd/log"
 pid_file                         "/home/lain/.mpd/pid"
