Change media key to go to previous song

--- a/cfg/i3/laptop/config
+++ b/cfg/i3/laptop/config
@@ -203,5 +203,5 @@ exec termite -r ncmpcpp -e ncmpcpp -c /home/lain/.config/termite/ncmpcpp_config
 
 # MPC Media
 bindsym $mod+p exec mpc toggle
-bindsym $mod+[ exec mpc seek 0
+bindsym $mod+[ exec mpc prev
 bindsym $mod+] exec mpc next
