--- a/cfg/ncmpcpp/config
+++ b/cfg/ncmpcpp/config
@@ -18,7 +18,7 @@
 ## MPD clients (eg. ncmpc) also use that location.
 ##
 #
-#lyrics_directory = ~/.lyrics
+lyrics_directory = ~/.lyrics
 #
 ##### connection settings #####
 #
@@ -30,7 +30,7 @@
 #
 ## Needed for tag editor and file operations to work.
 ##
-#mpd_music_dir = ~/music
+mpd_music_dir = ~/Music/beets
 #
 #mpd_crossfade_time = 5
 #
@@ -192,17 +192,17 @@ visualizer_color = 34, 64, 57, 94, 164, 198
 #
 #alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
 #
-current_item_prefix = $(magenta)$r
+current_item_prefix = $(magenta)$b
 #
-#current_item_suffix = $/r$(end)
+current_item_suffix = $/b$(end)
 #
 #current_item_inactive_column_prefix = $(white)$r
 #
 #current_item_inactive_column_suffix = $/r$(end)
 #
-#now_playing_prefix = $b
+now_playing_prefix = $r
 #
-#now_playing_suffix = $/b
+now_playing_suffix = $/r
 #
 #browser_playlist_prefix = "$2playlist$9 "
 #
@@ -431,14 +431,14 @@ progressbar_look = ─╼─
 ## Note: if below is enabled, ncmpcpp will ignore leading "The" word while
 ## sorting items in browser, tags in media library, etc.
 ##
-ignore_leading_the = yes
+#ignore_leading_the = no
 #
 ##
 ## Note: if below is enabled, ncmpcpp will ignore diacritics while searching and
 ## filtering lists. This takes an effect only if boost was compiled with ICU
 ## support.
 ##
-ignore_diacritics = no
+#ignore_diacritics = no
 #
 #block_search_constraints_change_if_items_found = yes
 #
