Fix MPD configuration directories

--- a/cfg/mpd/mpd.conf
+++ b/cfg/mpd/mpd.conf
@@ -1,16 +1,16 @@
 music_directory                  "/home/lain/Music/beets"
-db_file                          "/home/lain/.mpd/database"
-log_file                         "/home/lain/.mpd/log"
-pid_file                         "/home/lain/.mpd/pid"
-state_file                       "/home/lain/.mpd/state"
-playlist_directory               "/home/lain/.mpd/playlists"
+db_file                          "/home/lain/.config/mpd/database"
+log_file                         "/home/lain/.config/mpd/log"
+pid_file                         "/home/lain/.config/mpd/pid"
+state_file                       "/home/lain/.config/mpd/state"
+playlist_directory               "/home/lain/.config/mpd/playlists"
 log_level                        "default"
 #password                        "password@read,add,control,admin"
 #default_permissions             "read,add,control,admin"
 #user                            "lain"
 #bind_to_address                 "302"
 bind_to_address                  "127.0.0.1"
-bind_to_address                  "/home/lain/.mpd/socket"
+bind_to_address                  "/home/lain/.config/mpd/socket"
 port                             "6600"
 gapless_mp3_playback             "yes"
 auto_update                      "yes"
