--- a/lain/.config/systemd/user/wallpaper.service
+++ b/lain/.config/systemd/user/wallpaper.service
@@ -3,7 +3,7 @@ Description=Load a random wallpaper and colorscheme
 
 [Service]
 Type=forking
-ExecStart=/usr/bin/wal -q -i "/home/lain/Pictures/wallpapers" -a "85"
+ExecStart=/usr/bin/wal -i "/home/lain/Pictures/wallpapers" -a "85"
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=i3@.target
