--- a/lain/.config/systemd/user/wallpaper.service
+++ b/lain/.config/systemd/user/wallpaper.service
@@ -6,4 +6,4 @@ Type=forking
 ExecStart=/usr/bin/wal -i "/home/lain/Pictures/wallpapers" -a "85"
 
 [Install]
-WantedBy=i3@.target
+WantedBy=i3@.service
