--- a/lain/.config/systemd/user/emacs.service
+++ b/lain/.config/systemd/user/emacs.service
@@ -9,4 +9,4 @@ ExecStop=/usr/bin/emacsclient --eval "(kill-emacs)"
 Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
