--- a/packages.yml
+++ b/packages.yml
@@ -31,6 +31,7 @@ Window Manager:
         - .xinitrc
         - .xserverrc
       userunit:
+        - x11@.target
         - xmodmap@.service
         - xresources@.service
   - i3-gaps:
