--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,7 @@
 Base:
   - fish:
       config:
-        - .config/fish/config.fish
+        - .config/fish
         - .bashrc
 
 Command Line Tools:
@@ -29,22 +29,19 @@ Editors:
   - neovim
 
 Window Manager:
-  - x:
+  - x11:
       source: none
       config:
         - .xinitrc
         - .xserverrc
         - .bash_profile
-        - .config/x11/modmap
-      userunit:
-        - x11@.target
-        - xmodmap@.service
-        - xresources@.service
+      userunit: x11@.target
+  - xorg-xkbcomp:
+      alias: xkb
+      source: none
   - i3-gaps:
       alias: i3
       source: aur
-      config: .config/i3/config.ppi3
-      userunit: i3@.service
   - ppi3-git:
       source: aur
   - compton
@@ -57,8 +54,6 @@ Window Manager:
 Desktop Tools:
   - python-pywal:
       alias: wal
-      script: wal.fish
-      config: .config/wal
       userunit:
         - wallpaper.service
         - wallpaper.timer
